--- a/website_school_management/static/src/scss/base.scss
+++ b/website_school_management/static/src/scss/base.scss
@@ -1,3 +1,11 @@
+.js_language_selector {
+    button {
+        span {
+            font-weight: 600;
+        }
+    }
+}
+
 .breadcrumb {
     display: inline-flex;
     padding: 0;
