--- a/website_school_portal/views/custom.xml
+++ b/website_school_portal/views/custom.xml
@@ -403,12 +403,79 @@
         </div>
     </template>
 
+    <template id="_hz_custom_footer_links" name="Horizon Footer Links">
+        <div class="oe_structure">
+            <ul class="list-unstyled">
+                <li><a href="/contacts">Nous contacter</a></li>
+            </ul>
+        </div>
+    </template>
+
+    <template id="_hz_custom_footer_links_student" name="Horizon Footer Links Student">
+        <div class="oe_structure">
+            <p>Liens étudiants</p>
+            <ul class="list-unstyled">
+                <li><a href="/mes-donnes/mon-programme">Mon programme annuel</a></li>
+                <li><a href="/reservations/mes-reservations">Mes réservations</a></li>
+                <li><a href="/reservations/creation">Réserver une salle</a></li>
+                <li><a href="/etudiants-info">Valves étudiants</a></li>
+            </ul>
+        </div>
+    </template>
+
+    <template id="_hz_custom_footer_links_teacher" name="Horizon Footer Links Teacher">
+        <div class="oe_structure">
+            <p>Liens enseignants</p>
+            <ul class="list-unstyled">
+                <li><a href="/reservations/mes-reservations">Mes réservations</a></li>
+                <li><a href="/reservations/creation">Réserver une salle</a></li>
+                <li><a href="/etudiants-info">Valves étudiants</a></li>
+                <li><a href="/enseignants-info">Valves enseignants</a></li>
+            </ul>
+        </div>
+    </template>
+
+    <template
+        id="_hz_custom_footer_links_employee"
+        name="Horizon Footer Links Employee"
+    >
+        <div class="oe_structure">
+            <p>Liens employés</p>
+            <ul class="list-unstyled">
+                <li><a href="/reservations/mes-reservations">Mes réservations</a></li>
+                <li><a href="/reservations/creation">Réserver une salle</a></li>
+                <li><a href="/etudiants-info">Valves étudiants</a></li>
+                <li><a href="/enseignants-info">Valves enseignants</a></li>
+            </ul>
+        </div>
+    </template>
+
+
+
     <template id="_hz_custom_footer_description" name="Horizon Footer Description">
         <div class="oe_structure">
             <h5>Une école, une philosophie</h5>
             <p
             >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam, tellus porta gravida sodales, nibh felis sagittis massa, at gravida quam nisi et tortor. <br
                 />Curabitur vestibulum nunc at varius fermentum. In at lacinia enim, vel blandit ligula.</p>
+        </div>
+    </template>
+
+    <template id="_hz_booking_new_desc" name="Horizon New Booking Description">
+        <div class="oe_structure">
+            <a
+                href="https://sites.google.com/crlg.be/valves-etudiants/vie-%C3%A9tudiante/locaux-implantation-forgeur"
+                class="text-info text-uppercase pt-1 pb-1"
+            >Voir le règlement</a>
+        </div>
+    </template>
+
+    <template id="_hz_booking_search_desc" name="Horizon Search Booking Description">
+        <div class="oe_structure">
+            <a
+                href="/reservations/mes-reservations"
+                class="text-primary pt-1 pb-1"
+            >← Retour vers mes réservations</a>
         </div>
     </template>
 
