--- a/website_school_portal/views/main.xml
+++ b/website_school_portal/views/main.xml
@@ -30,13 +30,10 @@
         <xpath expr="//div[@id='wrap']" position="replace">
             <div id="wrap">
                 <t t-call="website_school_portal._hz_custom_home_banner" />
-                <hr />
                 <t t-call="website_school_portal._hz_custom_home_content" />
             </div>
         </xpath>
     </template>
-
-
 
     <template
         id="hz_account"
@@ -54,19 +51,32 @@
             </style>
             <div class="o_portal_my_home">
                 <h1 t-out="user_id.partner_id.name" />
+                <t t-set="profile_count" t-value="0" />
                 <ul class="d-flex list-unstyled">
-                    <li t-if="user_id.partner_id.student == True"><span
+                    <li t-if="user_id.partner_id.student == True">
+                        <t t-set="profile_count" t-value="profile_count + 1" />
+                        <span
                             class="badge bg-primary rounded-pill me-1 o_not_editable"
-                        >Étudiant</span></li>
-                    <li t-if="user_id.partner_id.teacher == True"><span
+                        >Étudiant</span>
+                    </li>
+                    <li t-if="user_id.partner_id.teacher == True">
+                        <t t-set="profile_count" t-value="profile_count + 1" />
+                        <span
                             class="badge bg-primary rounded-pill me-1 o_not_editable"
-                        >Enseignant</span></li>
-                    <li t-if="user_id.partner_id.employee == True"><span
+                        >Enseignant</span>
+                    </li>
+                    <li t-if="user_id.partner_id.employee == True">
+                        <t t-set="profile_count" t-value="profile_count + 1" />
+                        <span
                             class="badge bg-primary rounded-pill me-1 o_not_editable"
-                        >Employé</span></li>
-                    <li t-if="user_id._is_admin()"><span
+                        >Employé</span>
+                    </li>
+                    <li t-if="user_id._is_admin()">
+                        <t t-set="profile_count" t-value="profile_count + 1" />
+                        <span
                             class="badge bg-primary rounded-pill me-1 o_not_editable"
-                        >Administrateur du système</span></li>
+                        >Administrateur du système</span>
+                    </li>
                 </ul>
                 <t
                     t-set="session_info"
@@ -100,7 +110,7 @@
                     />
                     <p
                         class="o_portal_no_doc_message d-none"
-                    >No Documents to display</p>
+                    >Vous n'avez pas de documents disponibles pour le moment.</p>
                 </div>
                 <div
                     class="hz-editor-mode-only mt-5"
@@ -123,7 +133,10 @@
     </template>
 
     <template id="hz_account_student" name="Horizon Student Account Page" priority="32">
-        <h2 class="mt-3 o_not_editable">Profil étudiant</h2>
+        <h2
+            t-if="profile_count > 1 or horizon_website_designer"
+            class="mt-3 o_not_editable"
+        >Profil étudiant</h2>
         <t t-if="horizon_website_designer == True or horizon_state == 'no-form'">
             <div
                 class="hz-editor-mode-only my-2 o_not_editable"
@@ -193,8 +206,11 @@
     </template>
 
     <template id="hz_account_teacher" name="Horizon Teacher Account Page" priority="32">
-        <a class="btn btn-danger mb-2" href="/web">Accès back-office</a>
-        <h2 class="mt-3 o_not_editable">Profil enseignant</h2>
+        <h2
+            t-if="profile_count > 1 or horizon_website_designer"
+            class="mt-3 o_not_editable"
+        >Profil enseignant</h2>
+        <a class="btn btn-primary mb-2" href="/web">Accès back-office</a>
         <p
             class="o_not_editable"
         >Pas encore d'informations spécifiques pour les profils enseignants...</p>
@@ -206,8 +222,11 @@
         name="Horizon Employee Account Page"
         priority="32"
     >
-        <a class="btn btn-danger mb-2" href="/web">Accès back-office</a>
-        <h2 class="mt-3 o_not_editable">Profil employé</h2>
+        <h2
+            t-if="profile_count > 1 or horizon_website_designer"
+            class="mt-3 o_not_editable"
+        >Profil employé</h2>
+        <a class="btn btn-primary mb-2" href="/web">Accès back-office</a>
         <p
             class="o_not_editable"
         >Pas encore d'informations spécifiques pour les profils employés...</p>
@@ -215,7 +234,11 @@
     </template>
 
     <template id="hz_account_admin" name="Horizon Admin Account Page" priority="32">
-        <a class="btn btn-danger mb-2" href="/web">Accès back-office</a>
+        <h2
+            t-if="profile_count > 1 or horizon_website_designer"
+            class="mt-3 o_not_editable"
+        >Profil administrateur du système</h2>
+        <a class="btn btn-primary mb-2" href="/web">Accès back-office</a>
     </template>
 
 
