--- a/website_crlg_portal/static/src/scss/variables.scss
+++ b/website_crlg_portal/static/src/scss/variables.scss
@@ -2,12 +2,11 @@ $o-color-palettes: map-merge(
     $o-color-palettes,
     (
         "crlg": (
-            "o-color-1": #db0707,
-            "o-color-2": #b46060,
-            /* e6a7a7 */ "o-color-3": #e9bbbb,
+            "o-color-1": #e14f32,
+            "o-color-2": #ff9f76,
+            "o-color-3": #fdbb9f,
             "o-color-4": #ffffff,
             "o-color-5": #272d2d,
-
             "menu": 1,
             "footer": 5,
             "copyright-custom": "black-15",
