--- a/school_management/views/program_view.xml
+++ b/school_management/views/program_view.xml
@@ -191,8 +191,33 @@
         <field name="model">school.course_group</field>
         <field name="arch" type="xml">
             <search string="Search Course Group">
-                <field name="uid" filter_domain="[( 'uid', 'ilike', self)]" />
-                <field name="name" filter_domain="[( 'name', 'ilike', self)]" />
+                <field
+                    name="name"
+                    filter_domain="['|',('name','ilike',self),('uid','ilike',self)]"
+                />
+                <filter
+                    string="Current Year"
+                    name="current"
+                    domain="[('bloc_ids.year_sequence','=','current')]"
+                />
+                <filter
+                    string="Next Year"
+                    name="next"
+                    domain="[('bloc_ids.year_sequence','=','next')]"
+                />
+                <filter
+                    string="Previous Year"
+                    name="previous"
+                    domain="[('bloc_ids.year_sequence','=','previous')]"
+                />
+                <separator />
+                <group expand="1" string="Group By">
+                    <filter
+                        string="Responsible"
+                        name="responsible_id"
+                        context="{'group_by':'responsible_id'}"
+                    />
+                </group>
             </search>
         </field>
     </record>
@@ -202,7 +227,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">school.course_group</field>
         <field name="view_mode">kanban,tree,form</field>
-        <field name="context">{}</field>
+        <field name="context">{"search_default_current":1}</field>
         <field name="search_view_id" ref="view_course_group_filter" />
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
@@ -291,7 +316,7 @@
                 <field name="name" />
                 <field name="hours" />
                 <field name="credits" />
-                <field name="bloc_ids" widget="many2many_tags" />
+                <field name="teacher_ids" widget="many2many_tags" />
             </tree>
         </field>
     </record>
@@ -388,6 +413,32 @@
                     name="name"
                     filter_domain="['|',('name','ilike',self),('uid','ilike',self)]"
                 />
+                <filter
+                    string="Current Year"
+                    name="current"
+                    domain="[('bloc_ids.year_sequence','=','current')]"
+                />
+                <filter
+                    string="Next Year"
+                    name="next"
+                    domain="[('bloc_ids.year_sequence','=','next')]"
+                />
+                <filter
+                    string="Previous Year"
+                    name="previous"
+                    domain="[('bloc_ids.year_sequence','=','previous')]"
+                />
+                <separator />
+                <filter
+                    string="Is Described"
+                    name="described"
+                    domain="[('documentation_id','!=',False)]"
+                />
+                <filter
+                    string="Is Not Described"
+                    name="described"
+                    domain="[('documentation_id','=',False)]"
+                />
             </search>
         </field>
     </record>
@@ -397,7 +448,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">school.course</field>
         <field name="view_mode">tree,form</field>
-        <field name="context" />
+        <field name="context">{"search_default_current":1}</field>
         <field name="search_view_id" ref="view_course_filter" />
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
@@ -420,41 +471,6 @@
         <field name="view_mode">form</field>
         <field name="view_id" ref="course_form" />
         <field name="act_window_id" ref="action_course_tree" />
-    </record>
-
-    <record id="action_course_list" model="ir.actions.act_window">
-        <field name="name">Course List</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">school.course</field>
-        <field name="view_mode">tree,form</field>
-        <field name="search_view_id" ref="view_course_filter" />
-        <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
-                Click to add a course.
-            </p>
-            <p>
-                Odoo helps you easily track all activities related to a course.
-            </p>
-        </field>
-    </record>
-
-    <!--<record id="action_course_form_view1" model="ir.actions.act_window.view">
-      <field name="sequence" eval="0" />
-      <field name="view_mode">kanban</field>
-      <field name="view_id" ref="course_kanban_view" />
-      <field name="act_window_id" ref="action_course_form" />
-    </record>-->
-    <record id="action_course_list_tree_view1" model="ir.actions.act_window.view">
-        <field name="sequence" eval="1" />
-        <field name="view_mode">tree</field>
-        <field name="view_id" ref="view_course_tree" />
-        <field name="act_window_id" ref="action_course_list" />
-    </record>
-    <record id="action_course_list_form_view2" model="ir.actions.act_window.view">
-        <field name="sequence" eval="2" />
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="course_form" />
-        <field name="act_window_id" ref="action_course_list" />
     </record>
 
     <!--
@@ -641,8 +657,10 @@
         <field name="model">school.bloc</field>
         <field name="arch" type="xml">
             <search string="Search Bloc">
-                <field name="uid" filter_domain="[( 'uid', 'ilike', self)]" />
-                <field name="title" filter_domain="[('title', 'ilike',self)]" />
+                <field
+                    name="name"
+                    filter_domain="['|',('name','ilike',self),('uid','ilike',self)]"
+                />
                 <filter
                     string="Current Year"
                     name="current"
@@ -658,6 +676,18 @@
                     name="previous"
                     domain="[('year_sequence','=','previous')]"
                 />
+                <separator />
+                <filter
+                    string="Musique"
+                    name="musique"
+                    domain='[["program_id.speciality_id.domain_id","ilike","MUSIQUE"]]'
+                />
+                <filter
+                    string="Théatre"
+                    name="theatre"
+                    domain='[["program_id.speciality_id.domain_id","ilike","THEATRE"]]'
+                />
+                <separator />
                 <group expand="1" string="Group By">
                     <filter
                         string="Cycle"
@@ -679,7 +709,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">school.bloc</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{}</field>
+        <field name="context">{"search_default_current":1}</field>
         <field name="search_view_id" ref="view_bloc_filter" />
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
@@ -945,8 +975,10 @@
         <field name="model">school.program</field>
         <field name="arch" type="xml">
             <search string="Search Program">
-                <field name="uid" filter_domain="[( 'uid', 'ilike', self)]" />
-                <field name="title" filter_domain="[('title', 'ilike',self)]" />
+                <field
+                    name="name"
+                    filter_domain="['|',('name','ilike',self),('uid','ilike',self)]"
+                />
                 <filter
                     string="Current Year"
                     name="current"
@@ -961,6 +993,17 @@
                     string="Previous Year"
                     name="previous"
                     domain="[('year_sequence','=','previous')]"
+                />
+                <separator />
+                <filter
+                    string="Musique"
+                    name="musique"
+                    domain='[["speciality_id.domain_id","ilike","MUSIQUE"]]'
+                />
+                <filter
+                    string="Théatre"
+                    name="theatre"
+                    domain='[["speciality_id.domain_id","ilike","THEATRE"]]'
                 />
                 <separator />
                 <filter string="Draft" name="draft" domain="[('state','=','draft')]" />
@@ -1071,6 +1114,14 @@
     />
 
     <menuitem
+        name="Blocs"
+        parent="menu_main_program"
+        id="menu_blocs"
+        action="action_bloc_form"
+        sequence="15"
+    />
+
+    <menuitem
         name="Course Groups"
         parent="menu_main_program"
         id="menu_course_groups"
@@ -1089,13 +1140,6 @@
         parent="menu_main_program"
         action="action_course_tree"
         sequence="60"
-    />
-
-    <menuitem
-        id="menu_course_list"
-        parent="menu_main_program"
-        action="action_course_list"
-        sequence="80"
     />
 
 </odoo>
