HOR-100 : Improve course view

--- a/school_management/views/program_view.xml
+++ b/school_management/views/program_view.xml
@@ -317,6 +317,10 @@
                 <field name="hours" />
                 <field name="credits" />
                 <field name="teacher_ids" widget="many2many_tags" />
+                <field name="weight" />
+                <field name="is_annual" />
+                <field name="quadri" />
+                <field name="has_second_session" />
             </tree>
         </field>
     </record>
